# ptr

./: .env.example  .gitignore  CODEX_CUSTOM_INSTRUCTIONS.md  README.md  RUNNER_EXPERIENCE_SYSTEM.md  configs.txt  pyproject.toml
.runner_data/: experience.jsonl
common_lib/: __init__.py
common_lib/storage/: __init__.py  storage_client.py
common_lib/utils/: logger.py
manual_recording_fixes/: HCM_Promote_and_change_position.fixed.py
manual_recording_fixes/HCM_Approve_Job_Requisition/: HCM_Approve_Job_Requisition.py  HCM_Approve_Job_Requisition_params.xlsx
src/: __init__.py  playwright_runtime_build.yaml  pyproject.toml
src/activities/: __init__.py  activities.py  metadata.json
src/agent/: __init__.py  agent.py  metadata.json
src/runtime/: experience.py  helpers_v2.py  optimizer.py  parameterization.py  parser.py  script_generator.py
src/tools/: __init__.py  metadata.json  tools.py  tools.yml
src/utils/: __init__.py  html_report_generator.py
tests/: test_agent.py  test_html_report_generator.py  test_runtime_ast_pipeline.py  test_runtime_experience.py  test_runtime_helpers_v2.py  test_runtime_optimizer.py  test_tools.py
