[project]
name = "playwright-test-runner"
version = "0.0.4"
description = "Aetherion agent for executing Playwright-generated Python scripts as test suites"
authors = [{ name = "Calfus Inc.", email = "cloudops@calfus.com" }]
requires-python = ">=3.12.10,<3.13"

dependencies = [
    "aetherion-sdk @ https://sdk.sbox.aetherion.io/Darwin/aetherion_sdk-0.0.20-cp312-cp312-macosx_15_0_arm64.whl",
    "boto3>=1.34.0",
    "openpyxl>=3.1.0",
    "playwright>=1.58.0",
    "steel-sdk>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.3.0",
    "ruff==0.12.12",
    "black==25.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "common_lib"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
