[project]
name = "playwright-test-runner"
version = "0.0.4"
description = "Aetherion agent for executing Playwright-generated Python scripts as test suites"
authors = [{ name = "Calfus Inc.", email = "cloudops@calfus.com" }]
requires-python = ">=3.12.10,<3.13"

dependencies = [
    "aetherion_sdk==0.0.20",
    "boto3>=1.34.0",
    "metering_lib==0.0.2",
    "openpyxl>=3.1.0",
    "playwright>=1.58.0",
    "steel-sdk>=0.15.0",
    "ursa==0.0.38",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.3.0",
    "ruff==0.12.12",
    "black==25.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "codeartifact"
url = "https://aetherion-285774563994.d.codeartifact.us-east-1.amazonaws.com/pypi/aetherion/simple/"
explicit = true

[tool.uv.sources]
aetherion_sdk = { index = "codeartifact" }
ursa = { index = "codeartifact" }
metering_lib = { index = "codeartifact" }
